all links working

--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@tweet.user, @tweet] %> |
-<%= link_to 'Back', user_tweets_path(@tweet.user) %>
+<%= link_to 'Show', [@user, @tweet] %> |
+<%= link_to 'Back', user_tweets_path %>
