--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -10,5 +10,5 @@
   <%= @tweet.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_user_tweet_path(@tweet.user, @tweet) %> |
-<%= link_to 'Back', user_tweets_path(@tweet.user) %>
+<%= link_to 'Edit', edit_user_tweet_path(@user, @tweet) %> |
+<%= link_to 'Back', user_tweets_path(@user) %>
