Fixed some tests, added title to tweet model and changed tweet.message to tweet.body

--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Message:</strong>
-  <%= @tweet.message %>
+  <strong>Title:</strong>
+  <%= @tweet.title %>
+</p>
+<p>
+  <strong>Body:</strong>
+  <%= @tweet.body %>
 </p>
 
 <p>
