--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,9 +11,13 @@
     </div>
   <% end %>
 
+    <div class="field">
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+    </div>
   <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_field :message %>
+    <%= f.label :body %><br>
+    <%= f.text_field :body %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
@@ -21,5 +25,6 @@
   </div>
   <div class="actions">
     <%= f.submit %>
+    <%= button_tag "Cancel",  :type => 'button' %>
   </div>
 <% end %>
