--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Message</th>
+      <th>Title</th>
+      <th>Body</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -14,7 +15,8 @@
   <tbody>
     <% @tweets.each do |tweet| %>
       <tr>
-        <td><%= tweet.message %></td>
+        <td><%= tweet.title %></td>
+        <td><%= tweet.body %></td>
         <td><%= tweet.user_id %></td>
         <td><%= link_to 'Show', [tweet.user, tweet] %></td>
         <td><%= link_to 'Edit', edit_user_tweet_path(tweet.user, tweet) %></td>
@@ -26,5 +28,5 @@
 
 <br>
 <% if @user %>
-  <%= link_to 'New Tweet', new_user_tweet_path(tweet.user) %>
+  <%= link_to 'New Tweet', new_user_tweet_path(@user) %>
 <% end %>
