--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@user, @tweet] %> |
-<%= link_to 'Back', user_tweets_path %>
+<%= link_to "Cancel", user_tweets_path %>
