--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -17,7 +17,12 @@
       <tr>
         <td><%= tweet.title %></td>
         <td><%= tweet.body %></td>
-        <td><%= tweet.user_id %></td>
+        <td><% if @user %>
+          <%= link_to tweet.user_id, user_tweets_path(tweet.user) %>
+          <% else %>
+            <%= tweet.user_id %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', [tweet.user, tweet] %></td>
         <td><%= link_to 'Edit', edit_user_tweet_path(tweet.user, tweet) %></td>
         <td><%= link_to 'Destroy', [tweet.user, tweet], method: :delete, data: { confirm: 'Are you sure?' } %></td>
