--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Date</th>
       <th>Title</th>
       <th>Body</th>
       <th>User</th>
@@ -15,17 +16,15 @@
   <tbody>
     <% @tweets.each do |tweet| %>
       <tr>
-        <td><%= tweet.title %></td>
+        <td><%= tweet.created_at %></td>
+        <td><%= link_to tweet.title, [tweet.user, tweet] %></td>
         <td><%= tweet.body %></td>
         <td><% if @user %>
-          <%= link_to tweet.user_id, user_tweets_path(tweet.user) %>
+            <%= tweet.user.email %>
           <% else %>
-            <%= tweet.user_id %>
+            <%= link_to tweet.user.email, user_tweets_path(tweet.user) %>
           <% end %>
         </td>
-        <td><%= link_to 'Show', [tweet.user, tweet] %></td>
-        <td><%= link_to 'Edit', edit_user_tweet_path(tweet.user, tweet) %></td>
-        <td><%= link_to 'Destroy', [tweet.user, tweet], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -33,5 +32,6 @@
 
 <br>
 <% if @user %>
-  <%= link_to 'New Tweet', new_user_tweet_path(@user) %>
+  <%= link_to 'New Tweet', new_user_tweet_path(@user) %> |
+  <%= link_to 'View All Tweets', root_path %>
 <% end %>
