--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -15,4 +15,5 @@
 </p>
 
 <%= link_to 'Edit', edit_user_tweet_path(@user, @tweet) %> |
+<%= link_to 'Destroy', [@tweet.user, @tweet], method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', user_tweets_path(@user) %>
