--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
+      <th>Tweets</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,11 +14,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to user.email, user %></td>
+        <td><%= link_to user.tweets.size, user_tweets_path(user) %></td>
       </tr>
     <% end %>
   </tbody>
