--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -33,5 +33,8 @@
 <br>
 <% if @user %>
   <%= link_to 'New Tweet', new_user_tweet_path(@user) %> |
-  <%= link_to 'View All Tweets', root_path %>
+  <%= link_to 'View All Tweets', root_path %> |
+   <%= link_to 'Sign Out', destroy_user_session_path %>
+<% else %>
+  <%= link_to 'Create Account', new_user_registration_path %>
 <% end %>
