--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,6 +14,9 @@
   </thead>
 
   <tbody>
+    <% unless current_page?(root_path) %>
+      <% @tweets = @user.tweets %>
+    <% end %>
     <% @tweets.each do |tweet| %>
       <tr>
         <td><%= tweet.created_at %></td>
@@ -31,10 +34,18 @@
 </table>
 
 <br>
-<% if @user %>
-  <%= link_to 'New Tweet', new_user_tweet_path(@user) %> |
+<% if user_signed_in? %>
+  <%= link_to 'New Tweet', new_user_tweet_path(current_user) %> |
   <%= link_to 'View All Tweets', root_path %> |
    <%= link_to 'Sign Out', destroy_user_session_path %>
 <% else %>
+  <%= form_for(:user, :url => session_path(:user)) do |f| %>
+    <%= f.text_field :email %>
+    <%= f.password_field :password %>
+    <%= f.check_box :remember_me %>
+    <%= f.submit 'Login' %> <br>
+    <%= link_to "Forgot your password?", new_password_path(:user) %>
+  <% end %>
+
   <%= link_to 'Create Account', new_user_registration_path %>
 <% end %>
