--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -14,6 +14,8 @@
   <%= @tweet.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_user_tweet_path(@user, @tweet) %> |
-<%= link_to 'Destroy', [@tweet.user, @tweet], method: :delete, data: { confirm: 'Are you sure?' } %> | 
-<%= link_to 'All Tweets', root_path %>
+<% if current_user.id == @tweet.user_id %>
+  <%= link_to 'Edit', edit_user_tweet_path(@user, @tweet) %> |
+  <%= link_to 'Destroy', [@tweet.user, @tweet], method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
+  <%= link_to 'All Tweets', root_path %>
