--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,4 +12,4 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'View User Tweets', users_tweets_path %>
