--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -40,9 +40,8 @@
    <%= link_to 'Sign Out', destroy_user_session_path %>
 <% else %>
   <%= form_for(:user, :url => session_path(:user)) do |f| %>
-    <%= f.text_field :email %>
-    <%= f.password_field :password %>
-    <%= f.check_box :remember_me %>
+    <%= f.text_field :email, placeholder: "Email" %>
+    <%= f.password_field :password, placeholder: "Password" %>
     <%= f.submit 'Login' %> <br>
     <%= link_to "Forgot your password?", new_password_path(:user) %>
   <% end %>
