--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -14,7 +14,7 @@
   <%= @tweet.user_id %>
 </p>
 
-<% if current_user.id == @tweet.user_id %>
+<% if user_signed_in? && current_user.id == @tweet.user_id %>
   <%= link_to 'Edit', edit_user_tweet_path(@user, @tweet) %> |
   <%= link_to 'Destroy', [@tweet.user, @tweet], method: :delete, data: { confirm: 'Are you sure?' } %> |
 <% end %>
