--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,4 +23,5 @@
 
 <br>
 
-<%= link_to 'Sign Out', destroy_user_session_path %>
+<%= link_to 'Sign Out', destroy_user_session_path %> |
+<%= link_to "Back", root_path %>
