Formatted date on twitter list to not include seconds, added some minimal colour styling in the client's favourite colours, changed name of app to "JB's Twitter"

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+   color: ;
+}
+
+a:visited {
+  color: #db04b7
+}
+
+h1, th {
+ color: #0bb7a9;
+}
+
+#notice {
+  color: #db04b7;
+}
